# DeepWoke-SpeechModeration

./: .env.template  .gitignore  .slugignore  Procfile  README.md  accounts.db  convert_to_utf.py  corrected_with_lat_long.csv  make_random_lat_long.py  pyproject.toml  requirements.txt  run.sh
bot_discord/: discord_bot.py  requirement.txt
data/corpus_for_sexism_french/: corpus_with_text.csv  corpus_with_text_1_86.csv  corpus_with_text_400.csv  corpus_with_text_87.csv  corpus_with_text_df_1000.csv  corpus_with_text_df_1100.csv  corpus_with_text_df_1200.csv  corpus_with_text_df_1300.csv  corpus_with_text_df_1400.csv  corpus_with_text_df_1500.csv  corpus_with_text_df_1600.csv  corpus_with_text_df_1700.csv  corpus_with_text_df_1800.csv  corpus_with_text_df_1900.csv  corpus_with_text_df_2000.csv  corpus_with_text_df_2100.csv  corpus_with_text_df_2200.csv  corpus_with_text_df_2300.csv  corpus_with_text_df_2400.csv  corpus_with_text_df_2500.csv  corpus_with_text_df_2600.csv  corpus_with_text_df_2700.csv  corpus_with_text_df_2800.csv  corpus_with_text_df_2900.csv  corpus_with_text_df_3000.csv  (+70 more)
embedding/: embedding_downloader.py
fast_api_model/: dependencies.py
ml/: requirements.txt
ml/ml_core/: README.md
notebooks/: corpus_for_sexism_french.ipynb  id_to_dataset.ipynb
spark_scala/: .gitignore  build.sbt  start_scala_spark.sh  stop_scala_spark.sh
spark_streaming_dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json  server.js  start_node_servers.sh  stop_node_servers.sh  websocket_server.js
src/: checking_data_overlaps.ipynb  twitter_handler.py
(+89 files in other folders)
