[tool.poetry]
name = "deepwoke-speechmoderation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
